tests/checker/diagnostics/0233_adt_constructor_int_arg_mismatch_10.ml
type rec_kappa = Tag of int | Mark of bool
let _ = Tag true
